; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_ShowTransactionState.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_ShowTransactionState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@log_min_messages = common dso_local global i64 0, align 8
@DEBUG5 = common dso_local global i64 0, align 8
@client_min_messages = common dso_local global i64 0, align 8
@CurrentTransactionState = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ShowTransactionState to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ShowTransactionState(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @log_min_messages, align 8
  %4 = load i64, i64* @DEBUG5, align 8
  %5 = icmp sle i64 %3, %4
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* @client_min_messages, align 8
  %8 = load i64, i64* @DEBUG5, align 8
  %9 = icmp sle i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %6, %1
  %11 = load i8*, i8** %2, align 8
  %12 = load i32, i32* @CurrentTransactionState, align 4
  %13 = call i32 @ShowTransactionStateRec(i8* %11, i32 %12)
  br label %14

14:                                               ; preds = %10, %6
  ret void
}

declare dso_local i32 @ShowTransactionStateRec(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
